--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "fetch": "^1.1.0",
+    "node": "^25.1.0",
+    "node-fetch": "^3.3.2"
   }
 }
